--- a/index.html
+++ b/index.html
@@ -56,23 +56,16 @@
       </div>
       <div class="about-text">
         <h3>Vlad Fedorovich</h3>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus?
+        Hi, I'm actually an ordinary BNTU student.
+        There is little to tell about myself, for 3 years I worked in It_Club, was in a web studio and made up websites.
+        I like to engage in discussions, read and sometimes play games.
       </div>
     </div>
     <div class="info-aboutedu">
-      <div class="about-text order2 align-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, atque cum dolores doloribus est eum
-        fuga hic libero minima minus omnis recusandae reiciendis sapiente vitae voluptates. Ad est soluta
-        voluptatibus?
+      <div class="about-text order2 align-right">
+        I want to tell you a little about my experience of learning and "working" in It_Club.
+        I am quite an active member of the club and can always support any conversation.
+        Also in the club I learned a lot and found for myself what I always wanted.
       </div>
       <div class="photo order1">
         <img src="img/it-club.png" alt="my photo">
